--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "cql-tx",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Transactional Layer For Apache Cassandra ",
   "main": "transaction-handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node rest-interface.js"
+    	
   },
   "repository": {
     "type": "git",
